# mado

./: CLAUDE.md  Cargo.toml
src/: cli.rs  exit.rs  main.rs  source.rs
src/app/: message.rs  mod.rs  text_info.rs
src/theme/: apply.rs  defaults.rs  fonts.rs  mod.rs
