[package]
name = "mado"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
eframe = { version = "0.35.0", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
fontdb = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
